tcp-server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: asm-182-2
  name: tcp-server
