tcp-server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-server
  #namespace: tcp-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tcp-server
  template:
    metadata:
      labels:
        app: tcp-server
        version: v1
    spec:
      serviceAccountName: tcp-server-ksa
      containers:
      - name: tcp-server
        image: us-central1-docker.pkg.dev/cicd-system-demo-01/cicd-demo-01/tcp-on-asm-server@sha256:2db8f6f9782f35e76ae5215948a287212259f35c3baa7eaba530a22656117d4e
        ports:
          - name: tcp
            containerPort: 8888
