tcp-server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-server-svc
  namespace: tcp-server
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: tcp # adding for Istio
  selector:
    app: "tcp-server"
  type: LoadBalancer
